new/prusti/tests/pass/parse/implies_fail.stderr
error: expected Prusti assertion
  --> $DIR/implies_fail.rs:10:17
   |
10 | #[requires(true ==>)]
   |                 ^^^

error: expected Prusti assertion
  --> $DIR/implies_fail.rs:13:12
   |
13 | #[requires(==> true)]
   |            ^^^

error: expected expression
  --> $DIR/implies_fail.rs:16:20
   |
16 | #[requires((true ==> true) || true)]
   |                    ^

error: aborting due to 3 previous errors

